# simple-interpreter

./: .clang-format  CMakeLists.txt  LICENSE.md  Lexer.cpp  Lexer.h  README.md  Token.cpp  Token.h  TokenType.h  Visitor.cpp  Visitor.h
src/: CallStack.cpp  CallStack.h  DataType.cpp  DataType.h  Exceptions.cpp  Exceptions.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  NodeVisitor.cpp  Parser.cpp  Parser.h  ScopedSymbolTable.cpp  ScopedSymbolTable.h  SourceToSourceCompilerVisitor.cpp  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  SymbolTableVisitor.cpp  Token.cpp  Token.h  TokenType.cpp  TokenType.h  TypeCheckerVisitor.cpp  Visitor.cpp  Visitor.h  main.cpp  source.pas
